force-app/main/default/objects/Purchase_Order__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <label>Account Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charitable Contributions</fullName>
            </value>
            <value>
                <fullName>COGS - Agency Automitive Subcontract</fullName>
            </value>
            <value>
                <fullName>COGS - Agency Automitive Travel</fullName>
            </value>
            <value>
                <fullName>COGS - Agency Media Costs</fullName>
            </value>
            <value>
                <fullName>COGS – Agency Subcontract</fullName>
            </value>
            <value>
                <fullName>COGS – Agency Subcontract media costs</fullName>
            </value>
            <value>
                <fullName>COGS – Agency Travel and Client Development</fullName>
            </value>
            <value>
                <fullName>COGS – Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>COGS - Direct Mail Subcontract</fullName>
            </value>
            <value>
                <fullName>COGS - Pipeline Sales Travel &amp; Client Developemnt</fullName>
            </value>
            <value>
                <fullName>COGS – Pipeline Subcontract</fullName>
            </value>
            <value>
                <fullName>COGS – Pipeline Subcontract list services</fullName>
            </value>
            <value>
                <fullName>COGS – Pipeline Subcontract product technology</fullName>
            </value>
            <value>
                <fullName>COGS - Social Return Subcontract</fullName>
            </value>
            <value>
                <fullName>Company Event</fullName>
            </value>
            <value>
                <fullName>Hardware/software</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing Spend</fullName>
            </value>
            <value>
                <fullName>Office Expense</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
            <value>
                <fullName>Pipeline Travel and Client Development</fullName>
            </value>
            <value>
                <fullName>Postage and delivery</fullName>
            </value>
            <value>
                <fullName>Postage and delivery – Pipeline Implementation</fullName>
            </value>
            <value>
                <fullName>Prepaid_Expense</fullName>
                <label>Prepaid Expense</label>
            </value>
            <value>
                <fullName>Team Collateral</fullName>
            </value>
            <value>
                <fullName>Copier Expense</fullName>
            </value>
            <value>
                <fullName>Rent/Utilities</fullName>
            </value>
            <value>
                <fullName>Employee Development – drinks and snacks</fullName>
                <isActive>false</isActive>
                <label>Employee Development – drinks and snacks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>