force-app/main/default/objects/Purchase_Order__c/fields/Accounting_Processed__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box on PO record once it&apos;s been recorded.</inlineHelpText>
    <label>Accounting Processed</label>
    <type>Checkbox</type>
</CustomField>