force-app/main/default/objects/Purchase_Order__c/fields/Accounting_Year__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Year__c</fullName>
    <label>Accounting Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>