force-app/main/default/objects/Purchase_Order__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <inlineHelpText>Choose Yes if it&apos;s related to a planned budget item and No if it was not a planned budget item.</inlineHelpText>
    <label>Budget Item?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>