force-app/main/default/objects/Purchase_Order__c/fields/Creator_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Creator_s_Manager__c</fullName>
    <formula>CreatedBy.Manager.FirstName + &quot; &quot;+ CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator&apos;s Manager</label>
    <type>Text</type>
</CustomField>