force-app/main/default/objects/Purchase_Order__c/fields/Current_User_is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Manager__c</fullName>
    <formula>IF( Owner:User.ManagerId = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Manager</label>
    <type>Checkbox</type>
</CustomField>