force-app/main/default/objects/Purchase_Order__c/fields/Date_of_Actual_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Actual_Purchase__c</fullName>
    <label>Date of Actual Purchase</label>
    <type>Date</type>
</CustomField>