force-app/main/default/objects/Purchase_Order__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department Submitting PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>