force-app/main/default/objects/Purchase_Order__c/fields/Department_Paying_out_PO__c.field-meta.xml
<CustomField>
    <fullName>Department_Paying_out_PO__c</fullName>
    <label>Approver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chris Gooding - Cloud Solutions</fullName>
            </value>
            <value>
                <fullName>Eric Watkins - Outbound</fullName>
            </value>
            <value>
                <fullName>Melanie Clark - Culture/Marketing/Collateral/Video</fullName>
            </value>
            <value>
                <fullName>Brian Condon - Corporate/Facilities/Office Supplies</fullName>
            </value>
            <value>
                <fullName>Alyssa Stevenson - Inbound/Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>