force-app/main/default/objects/Purchase_Order__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <inlineHelpText>If your PO is for Sales, Sales Enablement or Services (Delivery, Account Management, Operations) please select the division it is for. If it is for more than one division, select one and put the other division and the % split in the notes

If your PO is for the back office functions for the entire enterprise, select the dept:
Accounting
HR
Training (Company Wide only)
Recruiting (Company Wide only)
Facilities
Corp Marketing &amp; Culture
IT and Technology (Company Wide only)
General Business</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound SDR</fullName>
            </value>
            <value>
                <fullName>SDR Boost (Collateral)</fullName>
            </value>
            <value>
                <fullName>Creative Services</fullName>
            </value>
            <value>
                <fullName>Inbound SDR (SEO)</fullName>
            </value>
            <value>
                <fullName>Talent Acquisition (Client Services)</fullName>
            </value>
            <value>
                <fullName>Bionic SDR (Sapper Core)</fullName>
            </value>
            <value>
                <fullName>Proserve</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Training (Company Wide only)</fullName>
            </value>
            <value>
                <fullName>Recruiting (Company Wide only)</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Corp Marketing &amp; Culture</fullName>
            </value>
            <value>
                <fullName>IT and Technology (Company Wide only)</fullName>
            </value>
            <value>
                <fullName>General Business Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>