force-app/main/default/objects/Purchase_Order__c/fields/Expense_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Expense_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if reimbursement is needed.</inlineHelpText>
    <label>Expense Reimbursement</label>
    <type>Checkbox</type>
</CustomField>