force-app/main/default/objects/Purchase_Order__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MasterCard</fullName>
                <label>MasterCard/Capital One</label>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
                <isActive>false</isActive>
                <label>American Express</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>