force-app/main/default/objects/Purchase_Order__c/fields/PO_Item_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>PO_Item_Subtotal__c</fullName>
    <inlineHelpText>Adds all items on PO.  Does not include tax or shipping.</inlineHelpText>
    <label>PO Item Subtotal</label>
    <summarizedField>PO_Item__c.Item_Total__c</summarizedField>
    <summaryForeignKey>PO_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>