force-app/main/default/objects/Purchase_Order__c/fields/PO_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>PO_Total_Amount__c</fullName>
    <formula>PO_Item_Subtotal__c + Shipping_Amount__c + Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>