force-app/main/default/objects/Purchase_Order__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>ID Only</description>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot;+Id, &quot;QR&quot;)</formula>
    <inlineHelpText>ID Only</inlineHelpText>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>