force-app/main/default/objects/Purchase_Order__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=100x100&amp;data=https://sObject/&quot;+Id+&quot;/view&quot;, &quot;QR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code URL</label>
    <type>Text</type>
</CustomField>