force-app/main/default/objects/Purchase_Order__c/fields/Receipt_Attached__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To show if the PO receipt is attached</description>
    <label>Receipt Attached</label>
    <type>Checkbox</type>
</CustomField>