force-app/main/default/objects/Purchase_Order__c/fields/Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Frequency__c</fullName>
    <label>Recurring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>