force-app/main/default/objects/Purchase_Order__c/fields/Recurring_PO__c.field-meta.xml
<CustomField>
    <fullName>Recurring_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring PO</label>
    <type>Checkbox</type>
</CustomField>