force-app/main/default/objects/Purchase_Order__c/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contract must be In Approval Process, Activated, Renewed</errorMessage>
        <filterItems>
            <field>Contract.Status</field>
            <operation>equals</operation>
            <value>In Approval Process, Activated, Renewed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>