force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Shipping Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>