force-app/main/default/objects/Purchase_Order__c/validationRules/Cant_Approve_Own_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Approve_Own_PO</fullName>
    <active>false</active>
    <description>Owner can&apos;t change PO Status to Approved.</description>
    <errorConditionFormula>AND( $User.Id &lt;&gt;  OwnerId,
  ISPICKVAL(PO_Status__c, &quot;Approved&quot;))</errorConditionFormula>
    <errorMessage>Only Approving Manager can update PO Status</errorMessage>
</ValidationRule>