force-app/main/default/objects/Purchase_Order__c/validationRules/Year_has_to_be_greater_than_created_year.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_has_to_be_greater_than_created_year</fullName>
    <active>false</active>
    <errorConditionFormula>YEAR(Submission_Date__c )&gt;  VALUE(Accounting_Year__c)</errorConditionFormula>
    <errorMessage>Year must be equal or greater than this year</errorMessage>
</ValidationRule>