force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Vendor__c</columns>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>PO_Total_Amount__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>PO_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>