force-app/main/default/objects/Purchase_Order__c/listViews/Eric_s_PO_s.listView-meta.xml
<ListView>
    <fullName>Eric_s_PO_s</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Vendor__c</columns>
    <columns>NAME</columns>
    <columns>PO_Total_Amount__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>PO_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>sprock</value>
    </filters>
    <label>Eric&apos;s PO&apos;s</label>
</ListView>