force-app/main/default/objects/Purchase_Order__c/listViews/Expense_Reports_Accounting_Processed.listView-meta.xml
<ListView>
    <fullName>Expense_Reports_Accounting_Processed</fullName>
    <columns>Accounting_Processed__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Type__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>Approved__c</columns>
    <columns>Budget_Item__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Accounting_Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Expense_Reimbursement__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Expense Reports - Accounting Processed</label>
</ListView>