force-app/main/default/objects/Purchase_Order__c/listViews/Last_Months_Inbound_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Last_Months_Inbound_Purchase_Orders</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>Comments__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>PO_Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Agency</value>
    </filters>
    <filters>
        <field>Date_of_Actual_Purchase__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Months Inbound Purchase Orders</label>
</ListView>