force-app/main/default/objects/Purchase_Order__c/listViews/Marketing_Department.listView-meta.xml
<ListView>
    <fullName>Marketing_Department</fullName>
    <columns>NAME</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>Comments__c</columns>
    <columns>PO_Total_Amount__c</columns>
    <columns>PO_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Budget_Item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Account_Code__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Accounting_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>Marketing Department</label>
</ListView>