force-app/main/default/objects/Purchase_Order__c/listViews/Outbound_POs_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Outbound_POs_Pending_Approval</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Vendor__c</columns>
    <columns>NAME</columns>
    <columns>PO_Total_Amount__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>PO_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>watkins</value>
    </filters>
    <label>Outbound POs Pending Approval</label>
</ListView>