force-app/main/default/objects/Purchase_Order__c/listViews/PO_Approval_Queue_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>PO_Approval_Queue_Purchase_Order</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Accounting_Month__c</columns>
    <columns>Accounting_Year__c</columns>
    <columns>Comments__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>PO_Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Agency</value>
    </filters>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Agency Purchase Orders</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>